Resolved overflow

--- a/Tech Path/style.css
+++ b/Tech Path/style.css
@@ -21,7 +21,7 @@ body {
     padding-left: 50px;
     padding-right: 100px;
     text-align: left;
-    width: 400px;
+    width: 32vw;
     height: 300px;
     color: #1A6692;
     box-shadow: black;
